# SyndesiCP

./: .gitignore  CMakeLists.txt  Makefile  Notes.md  README.md  install_arduino_library.sh  make_arduino_library.sh
examples/local_ethernet/: .gitignore  CMakeLists.txt  Makefile
examples/local_ethernet/device/: device.cpp  syndesi_config.h
examples/local_ethernet/host/: host.cpp  syndesi_config.h
include/: buffer.h  callbacks.h  core.h  frame.h  framemanager.h  interfaces.h  network.h  payloads.h  sdid.h  syndesi_tools.h  syndesicp.h
scripts/: callbacks_template.h.txt  commands.py  commands.yaml  commands_list_template.md  cpp.py  framemanagercallbacks_template.cpp.txt  generate_commands.py  md.py  payload_class_template.cpp.txt  payloads_template.cpp.txt  payloads_template.h.txt  payloads_template.py  settings.py  syndesi_config_template.h.txt  utilities.py
src/: buffer.cpp  core.cpp  frame.cpp  framemanager.cpp  framemanagercallbacks.cpp  network.cpp  payloads.cpp  sdid.cpp  syndesi_tools.cpp
user_config/: syndesi_config.h
